<resources>

    <!--App-->
    <string name="app_name">Graph.edu</string>
    <string name="navigation_item_fractal">Fractals</string>
    <string name="navigation_item_colors">Colors</string>
    <string name="navigation_item_rotation">Rotation</string>

    <!--Menu screen-->
    <string name="start">Start</string>
    
    <string name="about_us_title">About us</string>
    <string name="info_title">Info</string>

    <string name="fractals_screen_toolbar_title">Fractals</string>

    <string name="create_new_fractal">Click here to create new fractal</string>

    <string name="dialog_fractal_creation_title">Fractal Creation</string>
    <string name="dialog_fractal_creation_subtitle">f(z) = z^k + c</string>

    <string name="dialog_fractal_first_coefficient_label">k = 3</string>
    <string name="dialog_fractal_second_coefficient_label">k = 4</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>

    <string name="title_first_color">Color 1</string>
    <string name="title_second_color">Color 2</string>
    <string name="title_third_color">Color 3</string>
    <string name="title_fourth_color">Color 4</string>

    <string name="title_c_input">c = </string>

    <!--Colors Start Screen-->
    <string name="pick_image_message">Click here to select an image to modify colors</string>
    <string name="colors_screen_toolbar_title">Colors</string>

    <!--Image Edit Screen-->
    <string name="image_edit_screen_toolbar_title">Image</string>
    <string name="action_title_change_image_color">Change image color</string>
    <string name="action_title_change_image_color_space">Change image color space</string>
    <string name="tutorial_select_color">To begin with, you need to select a color from image palette</string>

    <!--Space Selection Screen-->
    <string name="actionToRgb">to RGB</string>
    <string name="actionToHsl">to HSL</string>
    <string name="title_change_color_lightness">Change lighness</string>
    <string name="action_pick">Pick</string>
    <string name="action_select">Select</string>
    
    <!--Rotation Start Screen-->
    <string name="rotation_screen_toolbar_title">Rotation</string>
    <string name="create_hexagon_title">"Click to create hexagon to rotate</string>

    <!--Rotation Creation Dialog-->
    <string name="title_hexagon_creation">Hexagon</string>
    <string name="message_hexagon_creation">Select the hexagon center</string>
    <string name="hexagon_creation_coordinate_x" translatable="false">x</string>
    <string name="hexagon_creation_coordinate_y" translatable="false">y</string>
    <string name="hexagon_creation_radius">Radius</string>
    <string name="hexagon_creation_action_positive">Confirm</string>
    <string name="hexagon_creation_action_negative">Cancel</string>

    <!--Rotation Screen-->
    <string name="action_rotate">Rotate</string>
    <string name="rotation_tutorial_message">Now rotate the hexagon by dragging left or right the bottom rotate button</string>
    <string name="vertex_selection_tutorial_message">Select hexagon center or one of the vertex to begin rotation</string>

    <!--Tutorial screen-->
    <string name="tutorial_complete_action">OK</string>

    <string name="hexagon_rotation_point_center_text">Center</string>
    <string name="hexagon_rotation_point_top_text">Top</string>
    <string name="hexagon_rotation_point_top_right_text">Top Right</string>
    <string name="hexagon_rotation_point_bottom_right_text">Bottom Right</string>
    <string name="hexagon_rotation_point_bottom_text">Bottom</string>
    <string name="hexagon_rotation_point_bottom_left_text">Bottom Left</string>
    <string name="hexagon_rotation_point_top_left_text">Top Left</string>
    <string name="title_handbook">Handbook</string>
    
    <!--About Us Screen-->
    <string name="about_us_developers">Andrew Shpek and Marian Stochaskyi</string>
    <string name="about_us_university_name">Lviv Polytechnic National University</string>
    <string name="about_us_app_description">Computer Graphics educational app</string>
    <string name="about_us_version_name">v.%s</string>
</resources>