<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/dialog_fractal_creation_title"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:text="@string/dialog_fractal_creation_subtitle"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <include layout="@layout/dialog_create_fractal_coefficient_layout" />

    <com.nulp.graphedu.presentation.views.betterLinearLayout.BetterLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:bll_children_spacing="12dp">

        <com.nulp.graphedu.presentation.views.colorSelector.ColorSelectorView
            android:id="@+id/viewColorSelectorFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:color_title="@string/title_first_color" />

        <com.nulp.graphedu.presentation.views.colorSelector.ColorSelectorView
            android:id="@+id/viewColorSelectorSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:color_title="@string/title_second_color"/>

        <com.nulp.graphedu.presentation.views.colorSelector.ColorSelectorView
            android:id="@+id/viewColorSelectorThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:color_title="@string/title_third_color" />

        <com.nulp.graphedu.presentation.views.colorSelector.ColorSelectorView
            android:id="@+id/viewColorSelectorFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:color_title="@string/title_fourth_color" />

    </com.nulp.graphedu.presentation.views.betterLinearLayout.BetterLinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/title_c_input" />

        <EditText
            android:id="@+id/inputC"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:padding="6dp"
            android:background="@drawable/bg_stroke_rounded"
            android:backgroundTint="@color/text_hint_color"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            tools:hint="0.0"/>

    </LinearLayout>

    <com.nulp.graphedu.presentation.views.betterLinearLayout.BetterLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:bll_children_spacing="32dp">

        <Button
            style="@style/ActionButton.ActionButtonNegative"
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel" />

        <Button
            style="@style/ActionButton.ActionButtonPositive"
            android:id="@+id/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_create" />

    </com.nulp.graphedu.presentation.views.betterLinearLayout.BetterLinearLayout>

</LinearLayout>