<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/title_change_color_lightness"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
        android:id="@+id/lightnessSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hslColoringMode="pure"
        app:hslMode="lightness" />

    <com.nulp.graphedu.presentation.views.betterLinearLayout.BetterLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:bll_children_spacing="32dp">

        <Button
            style="@style/ActionButton.ActionButtonNegative"
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel" />

        <Button
            style="@style/ActionButton.ActionButtonPositive"
            android:id="@+id/buttonPick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_pick" />

    </com.nulp.graphedu.presentation.views.betterLinearLayout.BetterLinearLayout>

</LinearLayout>